# husky

./: CMakeLists.txt  dep-config.cmake
core/: accessor.hpp  constants.hpp
examples/: CMakeLists.txt  linear_regression.cpp  logistic_regression.cpp  parquet.cpp  parquetAgg.cpp  svm.cpp
hdfs_lib/lib/: libhadoop.1.0.0.dylib  libhdfs.dylib
io/: hdfs_manager.cpp  hdfs_manager.hpp
lib/: aggregator.hpp
master/: CMakeLists.txt  parquet_file_assigner.cpp  parquet_file_assigner.hpp
parquet/: CMakeLists.txt  parquet_file_assigner.cpp  parquet_file_assigner.hpp  parquet_file_splitter.cpp  parquet_file_splitter.hpp  parquet_input_format.cpp  parquet_input_format.hpp  parquet_reader.cpp  parquet_reader.hpp  parquet_util.cpp  parquet_util.hpp  test.cpp  test.hpp
parquet/io/: HDFSFileSource.cpp  HDFSFileSource.hpp  ParquetSplit.cpp  ParquetSplit.hpp
parquet/model/: Field.cpp  Field.hpp  Row.cpp  Row.hpp
parquet_lib/: libparquet.dylib
resources/: 1col.parquet
scripts/: build_standalone
